--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-architect
+#theme: jekyll-theme-architect
 title: Denise Bradford's homepage
 description: Bookmark this to keep an eye on my project updates!
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
